@@ -3,8 +3,12 @@
 2011-02-23 <fumiyas at OSS echnology, Inc. Japan>
 	* smbldap_tools.pm:
 	  - get_next_id: Use getgrgid() for GID number
-	  - read_parameter: Use lexically-scoped variable $line instead of
-	    global $_
+	  - read_parameter: Use lexically-scoped variable $line
+	    instead of global $_
+	  - read_user_human_readable: Use UTF-8 flaged string and
+	    \P{IsPrint} to check if an LDAP attribute has non-printable
+	    characters or not
+
 	* smbldap-populate: Fix wrong sambaGroupType values for local groups
 	* Replace bare "smbpasswd" with "$config{smbpasswd}"
 	* smbldap-useradd: Add -h (--no-dereference) option to the
